# isaacsim-learning

./: CMakeLists.txt  README.md
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/: CMakeLists.txt  README.md  package.xml
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/config/ocs2/: fixed_base.info  task.info
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/config/ros2_control/: ros2_controllers.yaml
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/launch/: display.launch  gazebo.launch
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/meshes/: base_link.mtl  body4.glb  body4.mtl  left_link11.glb  left_link11.mtl  left_link12.glb  left_link12.mtl  left_link13.glb  left_link13.mtl  left_link14.glb  left_link14.mtl  left_link15.glb  left_link15.mtl  left_link16.glb  left_link16.mtl  left_link17.glb  left_link17.mtl  left_link18.glb  left_link18.mtl  right_link21.glb  right_link21.mtl  right_link22.glb  right_link22.mtl  right_link23.glb  right_link23.mtl  right_link24.glb  right_link24.mtl  right_link25.glb  right_link25.mtl  right_link26.glb  right_link26.mtl  right_link27.glb  right_link27.mtl  right_link28.glb  right_link28.mtl  wheel1.mtl  wheel2.mtl  wheel3.mtl
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/urdf/: arx_lift2s.urdf  old_arx_lift2s.urdf
robot description making/MyAttempt_arx_lift2s_description/arx_lift2s_description/xacro/: component.xacro  robot.xacro
(+46 files in other folders)
