<?xml version="1.0"?>
<package format="2">
  <name>arx_lift2s_description</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for ARX Lift 2S</p>
    <p>This package contains configuration data, 3D models and launch files
      for ARX Lift 2S robot
    </p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />

  <license>BSD</license>

  <exec_depend>robot_common_launch</exec_depend>
  <exec_depend>arx5_lift2s_description</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>

</package>